<resources>
    <string name="app_name">Coin Picker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">HOME</string>
    <string name="menu_change_password">CHANGE\nPASSWORD</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_resume_game">RESUME\nGAME</string>
    <string name="currency_symbol">₹</string>
    <string name="existing_user">Existing User</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User</string>
    <string name="remember_me">Remember Me</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="username">Username</string>
    <string name="oldpassword">Old Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_login">Login</string>
    <string name="single_digit_second_prefix">00:0</string>
    <string name="double_digit_second_prefix">00:</string>
    <string name="str_zero">0</string>
    <string name="str_currency_symbol">₹</string>
    <string name="str_htp">HOW TO PLAY</string>
    <string name="str_help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="str_terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_legal">Legal</string>
    <string name="str_logout">Logout</string>
    <string name="fragment_to_be_opened">fragment_to_be_opened</string>
    <string name="str_minus">-</string>
    <string name="str_one">1</string>
    <string name="str_plus">+</string>
    <string name="str_ticket">Ticket</string>
    <string name="str_buy">Buy</string>
    <string name="str_email">E-Mail</string>
    <string name="str_ticket_price">₹%s / Ticket</string>
    <string name="str_new_password">New Password</string>
    <string name="str_confirm_new_password">Confirm New Password</string>
    <string name="ticket_no">Ticket no. %s</string>
    <string name="loading">Loading</string>
    <string name="claim_rejected">Claim Rejected</string>
    <string name="insufficient_cash">Insufficient Cash?</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="request_password">Request Password</string>
    <string name="referral_code">Referral Code</string>
    <string name="game_starts_in">Game starts in</string>
    <string name="str_days">days</string>
    <string name="str_hours">hours</string>
    <string name="str_minutes">minutes</string>
    <string name="str_seconds">seconds</string>
    <string name="winners_list">WINNERS LIST</string>
    <string name="select_date">Select Date</string>
    <string name="winner">Winner</string>
    <string name="category">Category</string>
    <string name="free_play">Free Play</string>
    <string name="how_to_play">How To Play</string>
    <string name="change_npassword">Change\nPassword</string>
    <string name="more">More</string>
    <string name="version">Version: %s</string>
    <string name="upcoming_game">Upcoming game</string>
    <string name="played_game">Played game</string>
    <string name="starts_at">Starts at</string>
    <string name="played_on">Played on</string>
    <string name="no_prizes_won">No Prizes won</string>
    <string name="save_ticket">Save Ticket</string>
    <string name="claim">Claim</string>
    <string name="join_now">Join Now</string>
    <string name="view_ticket">View Ticket</string>
    <string name="str_guest_login">Guest Login</string>
</resources>
